--- a/core/templates/blog/post/list.html
+++ b/core/templates/blog/post/list.html
@@ -14,6 +14,7 @@
             Published {{ post.publish }} by {{ post.author }}
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
-    {% endfor %}
 
+    {% endfor %}
+{% include "blog/pagination.html" with page=posts %}
 {% endblock %}
